--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         rich features, while applying the best practices for Test Automation project design.
     </description>
 	<properties>
-		<!-- Make sure you point to the latest in-house version: https://automatest.jfrog.io/artifactory/SHAFT_ENGINE/io/github/mohabmohie/SHAFT_ENGINE/ -->
+		<!-- Make sure to star the project on github to get notified and update to the latest version: https://github.com/MohabMohie/SHAFT_ENGINE/releases -->
 		<shaft_engine.version>6.2.20220517</shaft_engine.version>
 	</properties>
 	<repositories>
