--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.mohabmohie</groupId>
 	<artifactId>using_SHAFT_ENGINE</artifactId>
-	<version>6.1.20220113</version>
+	<version>6.2.20220624</version>
 	<name>Using SHAFT_ENGINE</name>
 	<description>This is a sample project to showcase how to get started using SHAFT_Engine, and how to use some of its
         rich features, while applying the best practices for Test Automation project design.
     </description>
 	<properties>
 		<!-- Make sure to star the project on github to get notified and update to the latest version: https://github.com/MohabMohie/SHAFT_ENGINE/releases -->
-		<shaft_engine.version>6.2.20220609</shaft_engine.version>
+		<shaft_engine.version>6.2.20220624</shaft_engine.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -25,7 +25,7 @@
 	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>io.github.mohabmohie</groupId>
+			<groupId>io.github.shafthq</groupId>
 			<artifactId>SHAFT_ENGINE</artifactId>
 			<version>${shaft_engine.version}</version>
 		</dependency>
@@ -52,7 +52,7 @@
 					<dependency>
 						<groupId>org.aspectj</groupId>
 						<artifactId>aspectjweaver</artifactId>
-						<version>1.9.7</version>
+						<version>1.9.9.1</version>
 					</dependency>
 				</dependencies>
 				<configuration>
@@ -61,7 +61,7 @@
 					<encoding>UTF-8</encoding>
 					<argLine>
 						-Dtestng.dtd.http=true
-						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.7/aspectjweaver-1.9.7.jar"
+						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.9.1/aspectjweaver-1.9.9.1.jar"
 					</argLine>
 					<properties>
 						<property>
